# web-app/src/main/java/com/epam/brest/web_app/controller/BandControllerApiClient.java
@@ -8,7 +8,6 @@ import io.swagger.client.api.BandApi;
 import io.swagger.client.api.BandsApi;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.boot.autoconfigure.condition.ConditionalOnExpression;
 import org.springframework.context.annotation.Conditional;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -16,6 +15,7 @@ import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 
 /**
  * MVC controller using ApiClient automatically generated by the Swagger Codegen.
@@ -48,6 +48,24 @@ public class BandControllerApiClient {
         }
         return "bands";
     }
+
+    @GetMapping(value = "/bands/fill")
+    public String fillFakeBands(@RequestParam(value = "size", required = false)
+                                   Integer size,
+                                @RequestParam(value = "language", required = false)
+                                    String language,
+                                Model model) {
+        LOGGER.debug("fillFakeBands({},{})", size, language);
+        try {
+            model.addAttribute("bands", bandsApi.fillBandsDtoFake(size,language));
+        } catch (ApiException e) {
+            e.printStackTrace();
+        }
+        model.addAttribute("size", size);
+        model.addAttribute("language", language);
+        return "bands";
+    }
+
 
     @GetMapping(value = "/band")
     public String gotoAddBandPage(Model model) {
